inheritance, szufladkowanie widokow

--- a/links/templates/links/first.html
+++ b/links/templates/links/first.html
@@ -17,6 +17,6 @@
     Vivamus eget urna sed odio consectetur rhoncus vel quis nulla. Etiam quis purus ac sapien porta bibendum. Vivamus facilisis posuere justo. Nunc nibh tellus, blandit nec sem ut, fringilla suscipit ligula. Pellentesque pulvinar facilisis tempor. Duis finibus leo eget tellus viverra scelerisque. Integer pharetra, neque quis sodales maximus, leo erat iaculis ante, fermentum commodo eros turpis a orci. Aenean sit amet mattis justo. Integer nec nisl non massa aliquam porttitor. Praesent dictum orci suscipit sapien efficitur ultrices. In vestibulum feugiat mauris, in auctor lacus consequat a. Sed accumsan laoreet tortor, ac dictum purus tristique eu. Nunc sed quam justo. Maecenas imperdiet ante at ullamcorper viverra. Integer euismod porttitor fermentum. In feugiat ligula nulla, sed congue nibh rutrum nec.
 <!--    <p>Przejdź do strony <a href="/links/second/">drugiej</a>.</p> zahardcodowany url, statyczne linkowanie -->
 <!--    dynamiczne linkowanie -->
-    <p>Przejdź do strony <a href="{% url 'second' %}">drugiej</a>.</p>
+    <p>Przejdź do strony <a href="{% url 'links:second' %}">drugiej</a>.</p>
 </body>
 </html>
