--- a/links/templates/links/third.html
+++ b/links/templates/links/third.html
@@ -15,6 +15,6 @@
     Nullam ac tellus eu lorem placerat dapibus sit amet eu felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat nisl leo, rutrum cursus mi ultrices non. Suspendisse ac orci a lorem posuere ultricies eu quis leo. Vestibulum eget lorem cursus, luctus elit et, imperdiet mauris. Cras mi felis, bibendum vitae felis vitae, malesuada rhoncus risus. Donec non pulvinar nisl, sed egestas felis. Morbi nec venenatis lectus, at eleifend massa. Integer nec augue ornare, vestibulum metus eget, dignissim sem. Etiam sit amet lacus nec sapien semper sodales id a nisl. Aenean eu orci tincidunt, dictum risus vel, auctor urna. Quisque hendrerit non odio eget maximus. Mauris bibendum sed velit non aliquet.
 
     Mauris vel augue lacus. Etiam a finibus velit, at venenatis elit. Mauris egestas, justo et euismod vulputate, eros neque porttitor nisi, ac euismod felis felis quis tellus. Aliquam vel nulla urna. Morbi volutpat vestibulum felis, nec congue orci rutrum eget. Suspendisse risus arcu, scelerisque non semper et, varius vitae turpis. Donec rhoncus congue augue, a varius lacus malesuada vitae. Quisque id interdum eros, non eleifend ex. Nam urna lectus, placerat quis eleifend non, rhoncus ac ipsum. Nunc imperdiet lacinia nunc, eu fermentum ipsum porttitor eu. Morbi sit amet massa ut enim auctor pharetra in quis ipsum. Nunc rutrum tortor commodo lectus finibus porttitor.
-    <p>Przejdź do strony <a href="{% url 'first' %}">pierwszej</a>.</p>
+    <p>Przejdź do strony <a href="{% url 'links:first' %}">pierwszej</a>.</p>
 </body>
 </html>
