--- a/links/templates/links/second.html
+++ b/links/templates/links/second.html
@@ -19,6 +19,6 @@
 <!--    <p>Przejdź do strony <a href="{% url 'first' %}">pierwszej</a></p>-->
 
 <!--    linki dynamiczne z parametrem -->
-    <p>Przejdź do strony <a href="{% url 'third' 'abc' %}">trzeciej</a></p>
+    <p>Przejdź do strony <a href="{% url 'links:third' 'abc' %}">trzeciej</a></p>
 </body>
 </html>
