--- a/form_app_advanced/templates/form_app_advanced/form_1.html
+++ b/form_app_advanced/templates/form_app_advanced/form_1.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Formularz 1</title>
+    <script>
+        function validate() {
+            var name = document.getElementById("name").value
+            if (name.includes ("$")) {
+                alert("Zła wartość w polu name (usuń znak '$')");
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+    </script>
+
 </head>
 <body>
-    <form method="post">
+    <form method="post" onsubmit="return validate();">
         {% csrf_token %}
-        <label>Imię:<input type="text" name="name"></label>
+        <label>Imię:<input type="text" name="name" required></label>
         <label>Email:<input type="email" name="email"></label>
         <label>Kategoria:<select name="category">
             <option value="question">Pytanie</option>
